--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ enable.auto.commit=true
 auto.commit.interval.ms=1000
 key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#每次最大拉取记录数
+max.poll.records=5
